FEAT: Added guest name to add/edit booking templates

--- a/bookings/templates/bookings/add_booking.html
+++ b/bookings/templates/bookings/add_booking.html
@@ -10,10 +10,10 @@
         <div class="md:col-span-1">
             <div class="px-4 sm:px-0">
                 <h3 class="text-lg font-medium leading-6 text-gray-900">
-                    Personal Information
+                    Add Booking for {{ guest.first_name }} {{ guest.last_name }}
                 </h3>
                 <p class="mt-1 text-sm text-gray-600">
-                    Contact and other useful information about the guest.
+                    Once saved you will see the booking on the guest detail page.
                 </p>
             </div>
         </div>
