--- a/bookings/templates/bookings/edit_booking.html
+++ b/bookings/templates/bookings/edit_booking.html
@@ -22,7 +22,7 @@
         <div class="md:col-span-1">
             <div class="px-4 sm:px-0">
                 <h3 class="text-lg font-medium leading-6 text-gray-900">
-                    Personal Information
+                    Add Booking for {{ booking.guest }}
                 </h3>
                 <p class="mt-1 text-sm text-gray-600">
                     Contact and other useful information about the guest.
