STYLE: Updated template style on all allauth account templates

--- a/theme/templates/allauth/account/logout.html
+++ b/theme/templates/allauth/account/logout.html
@@ -26,26 +26,33 @@
 </div>
 
 
-<div class="bg-gray-100 pb-12">
-  <div class="w-1/3 mx-auto">
-<p class="pt-6 ml-3">{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="bg-gray-100 pb-10 min-h-full flex flex-col justify-center sm:px-6 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+      <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+        <p class="pt-6 ml-3">{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="POST" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  <div class="space-y-8 divide-y divide-gray-200">
-    <div>
-      <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
-        {{ form|crispy }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button type="submit" class="lg:w-1/3 ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{% trans 'Sign Out' %}</button>
+        <form method="POST" action="{% url 'account_logout' %}">
+          {% csrf_token %}
+          <div class="space-y-8 divide-y divide-gray-200">
+            <div>
+              <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button type="submit"
+                  class="lg:w-1/3 ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{%
+                  trans 'Sign Out' %}</button>
+              </div>
+            </div>
+          </div>
       </div>
+      </form>
     </div>
   </div>
-  </div>
-</form>
 </div>
+
 
 
 {% endblock %}
