--- a/theme/templates/allauth/account/email_confirm.html
+++ b/theme/templates/allauth/account/email_confirm.html
@@ -26,36 +26,43 @@
         </div>
     </div>
 </div>
-<div class="bg-gray-100 pb-12">
-    <div class="w-1/3 mx-auto">
+<div class="bg-gray-100 pb-10 min-h-full flex flex-col justify-center sm:px-6 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-md">
+
         {% if confirmation %}
 
         {% user_display confirmation.email_address.user as user_display %}
+        <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+                <p class="py-6 ml-3">Please confirm that <a href="mailto:{{ confirmation.email_address.email }}">{{
+                        confirmation.email_address.email }}</a> is an e-mail address for user {{ user_display }}.</p>
 
-        <p class="py-6 ml-3">Please confirm that <a href="mailto:{{ confirmation.email_address.email }}">{{ confirmation.email_address.email }}</a> is an e-mail address for user {{ user_display }}.</p>
+                <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 
-        <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                    {% csrf_token %}
 
-            {% csrf_token %}
-
-            <div class="space-y-8 divide-y divide-gray-200">
-                <div>
-                    <div
-                        class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                        <button type="submit">{% trans 'Confirm' %}</button>
+                    <div class="space-y-8 divide-y divide-gray-200">
+                        <div>
+                            <div
+                                class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                                <button type="submit">{% trans 'Confirm' %}</button>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </form>
+
+                {% else %}
+
+                {% url 'account_email' as email_url %}
+
+                <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a
+                        href="{{ email_url }}">issue a
+                        new e-mail confirmation request</a>.{% endblocktrans %}</p>
+
+                {% endif %}
             </div>
-        </form>
-
-        {% else %}
-
-        {% url 'account_email' as email_url %}
-
-        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a
-                new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-        {% endif %}
+        </div>
     </div>
 </div>
+
 {% endblock %}
