--- a/theme/templates/allauth/account/login.html
+++ b/theme/templates/allauth/account/login.html
@@ -29,59 +29,65 @@
   </div>
 </div>
 
-<div class="bg-gray-100 pb-12">
-  <div class="w-1/3 mx-auto">
-    {% get_providers as socialaccount_providers %}
-    {% if socialaccount_providers %}
-    <p class="pt-6">{% blocktrans with site.name as site_name %}Please sign in with one
-      of your existing third party accounts. Or, <a class="underline text-blue-500" href="{{ signup_url }}">sign up</a>
-      for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+<div class="bg-gray-100 pb-10 min-h-full flex flex-col justify-center sm:px-6 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+      <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+        {% get_providers as socialaccount_providers %}
+        {% if socialaccount_providers %}
+        <p class="pt-6">{% blocktrans with site.name as site_name %}Please sign in with one
+          of your existing third party accounts. Or, <a class="underline text-blue-500" href="{{ signup_url }}">sign
+            up</a>
+          for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-    <div class="socialaccount_ballot">
+        <div class="socialaccount_ballot">
 
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
+          <ul class="socialaccount_providers">
+            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+          </ul>
 
-      <div class="login-or">{% trans 'or' %}</div>
+          <div class="login-or">{% trans 'or' %}</div>
 
-    </div>
+        </div>
 
-    {% include "socialaccount/snippets/login_extra.html" %}
+        {% include "socialaccount/snippets/login_extra.html" %}
 
-    {% else %}
-    <p class="pt-6">{% blocktrans %}If you have not created an account yet, then please
-      <a class="underline text-blue-500" href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
-    </p>
-    {% endif %}
+        {% else %}
+        <p class="pt-6">{% blocktrans %}If you have not created an account yet, then please
+          <a class="underline text-blue-500" href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
+        </p>
+        {% endif %}
 
-    <form method="POST" action="{% url 'account_login' %}">
-      {% csrf_token %}
-      <div class="space-y-8 divide-y divide-gray-200">
-        <div>
-          <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
-            {{ form|crispy }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
+        <form method="POST" action="{% url 'account_login' %}">
+          {% csrf_token %}
+          <div class="space-y-8 divide-y divide-gray-200">
+            <div>
+              <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="pt-5">
-        <div class="flex justify-end">
-          <a type="button" href="{% url 'account_reset_password' %}"
-            class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            {% trans "Forgot Password?" %}
-          </a>
-          <button type="submit"
-            class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            {% trans "Sign In" %}
-          </button>
-        </div>
+          <div class="pt-5">
+            <div class="flex justify-end">
+              <a type="button" href="{% url 'account_reset_password' %}"
+                class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                {% trans "Forgot Password?" %}
+              </a>
+              <button type="submit"
+                class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                {% trans "Sign In" %}
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
-    </form>
+    </div>
   </div>
 </div>
+
 
 {% endblock %}
