--- a/theme/templates/allauth/account/password_change.html
+++ b/theme/templates/allauth/account/password_change.html
@@ -2,15 +2,50 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extra_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+<!-- Hero section -->
+<div class="relative mt-2">
+    <div class="absolute inset-x-0 bottom-0 h-1/2 bg-gray-100"></div>
+    <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+        <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
+            <div class="absolute inset-0">
+                <img class="h-full w-full object-cover"
+                    src="https://images.unsplash.com/photo-1546195643-70f48f9c5b87?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+                    alt="People working on laptops">
+                <div class="absolute inset-0 bg-gradient-to-r from-purple-800 to-indigo-700 mix-blend-multiply"></div>
+            </div>
+            <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
+                <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
+                    <span class="block text-white">Change Password</span>
+                </h1>
+                <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
+                    Update your password or click forgot password.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+<div class="bg-gray-100 pb-10 min-h-full flex flex-col justify-center sm:px-6 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-md">
+        <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+                <p class="pt-6">{% blocktrans %}If you have not created an account yet, then please
+                    <a class="underline text-blue-500" href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
+                </p>
+                <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" name="action"
+                        class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{%
+                        trans "Change Password" %}</button>
+                    <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
