--- a/theme/templates/allauth/account/password_reset_from_key_done.html
+++ b/theme/templates/allauth/account/password_reset_from_key_done.html
@@ -1,9 +1,29 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extra_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<!-- Hero section -->
+<div class="relative mt-2">
+    <div class="absolute inset-x-0 bottom-0 h-1/2 bg-gray-100"></div>
+    <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+      <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
+        <div class="absolute inset-0">
+          <img class="h-full w-full object-cover"
+            src="https://images.unsplash.com/photo-1546195643-70f48f9c5b87?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+            alt="People working on laptops">
+          <div class="absolute inset-0 bg-gradient-to-r from-purple-800 to-indigo-700 mix-blend-multiply"></div>
+        </div>
+        <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
+          <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
+            <span class="block text-white">Change Password</span>
+          </h1>
+          <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
+            {% trans 'Your password is now changed.' %}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
