--- a/theme/templates/allauth/account/signup.html
+++ b/theme/templates/allauth/account/signup.html
@@ -31,37 +31,42 @@
 
 
 
-<div class="bg-gray-100 pb-12">
-  <div class="w-1/3 mx-auto">
-    <p class="pt-6">{% blocktrans %}Already have an account? Then please <a class="underline text-blue-500"
-        href="{{ login_url }}">sign
-        in</a>.{% endblocktrans %}</p>
-    <form id="signup_form" method="post" action="{% url 'account_signup' %}">
-      {% csrf_token %}
-      <div class="space-y-8 divide-y divide-gray-200">
-        <div>
-          <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
-            {{ form|crispy }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
+<div class="bg-gray-100 pb-10 min-h-full flex flex-col justify-center sm:px-6 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+      <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+        <p class="pt-6">{% blocktrans %}Already have an account? Then please <a class="underline text-blue-500"
+            href="{{ login_url }}">sign
+            in</a>.{% endblocktrans %}</p>
+        <form id="signup_form" method="post" action="{% url 'account_signup' %}">
+          {% csrf_token %}
+          <div class="space-y-8 divide-y divide-gray-200">
+            <div>
+              <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="pt-5">
+            <div class="flex justify-end">
+              <button type="reset" form="signup-form"
+                class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Reset
+              </button>
+              <button type="submit"
+                class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Signup
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="pt-5">
-        <div class="flex justify-end">
-          <button type="reset" form="signup-form"
-            class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Reset
-          </button>
-          <button type="submit"
-            class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Signup
-          </button>
-        </div>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
+
 
 {% endblock %}
