--- a/theme/templates/allauth/account/verification_sent.html
+++ b/theme/templates/allauth/account/verification_sent.html
@@ -25,9 +25,15 @@
     </div>
 </div>
 
-<div class="bg-gray-100 pb-12">
-    <div class="w-1/3 mx-auto">
-        <p class="py-6">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+<div class="bg-gray-100 pb-10 min-h-full flex flex-col justify-center sm:px-6 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-md">
+        <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+                <p class="py-6">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided
+                    to finalize the signup process. Please contact us if you do not receive it within a few minutes.{%
+                    endblocktrans %}</p>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
