--- a/website/templates/website/signup.html
+++ b/website/templates/website/signup.html
@@ -35,9 +35,8 @@
       <div class="space-y-8 divide-y divide-gray-200">
         <div>
           <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
-
-            {% crispy signup_form %}
-            <hr>
+            <p class="text-sm text-gray-500">Signup Plan: {{ signup_plan }}</p>
+            <p class="text-sm text-gray-500">Plan Monthly Cost: €{{ signup_monthly }}</p>
             <div id="card-element"></div>
             <div id="card-errors" role="alert"></div>
           </div>
@@ -45,20 +44,16 @@
       </div>
 
       <div class="mt-3 text-sm text-grey-200">
-        <p>By clicking Signup you agree to our <a class="text-blue-500 font-medium underline">Terms & Conditions</a> for
+        <p class="py-4">By clicking Signup you agree to our <a class="text-blue-500 font-medium underline" href="{% url 'terms' %}">Terms & Conditions</a> for
           the {{ signup_plan }} plan. You will be charged €{{ signup_monthly }} today and the same amount each month
           thereafter to continue your service.</p>
       </div>
 
       <div class="pt-5">
         <div class="flex justify-end">
-          <button type="reset" form="signup-form"
-            class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Reset
-          </button>
           <button type="submit" form="signup-form" id="submit-button"
             class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Signup
+            Pay
           </button>
         </div>
       </div>
@@ -76,26 +71,12 @@
 {{ client_secret|json_script:"id_client_secret" }}
 
 <script>
+  
   var stripePublicKey = document.getElementById('id_stripe_public_key').innerHTML.slice(1, -1);
   var clientSecret = document.getElementById('id_client_secret').innerHTML.slice(1, -1);
   var stripe = Stripe(stripePublicKey);
   var elements = stripe.elements();
-  var style = {
-    base: {
-      color: '#000',
-      fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-      fontSmoothing: 'antialiased',
-      fontSize: '16px',
-      '::placeholder': {
-        color: '#aab7c4'
-      }
-    },
-    invalid: {
-      color: '#dc3545',
-      iconColor: '#dc3545'
-    }
-  };
-  var card = elements.create('card', { style: style });
+  var card = elements.create('card', { });
   card.mount('#card-element');
 
   // ERROR CHECKING STRIPE
@@ -109,17 +90,14 @@
         <span>${even.error.message}</span>
         `;
       errorDiv.innherHTML = html;
-      console.log('card error');
     } else {
       errorDiv.textContent = '';
-      console.log('no card error');
     }
   });
 
 
   // PAYMENT INTENT WITHIN STRIPE
   var form = document.getElementById('signup-form');
-  console.log(form);
 
   form.addEventListener('submit', function (ev) {
     ev.preventDefault();
