FIX: Corrected trans block error in allauth verification_sent template

--- a/theme/templates/allauth/account/verification_sent.html
+++ b/theme/templates/allauth/account/verification_sent.html
@@ -29,9 +29,8 @@
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
         <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
             <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-                <p class="py-6">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided
-                    to finalize the signup process. Please contact us if you do not receive it within a few minutes.{%
-                    endblocktrans %}</p>
+                <p class="py-6">We have sent an e-mail to you for verification. Follow the link provided
+                    to finalize the signup process. Please contact us if you do not receive it within a few minutes.</p>
             </div>
         </div>
     </div>
