--- a/messaging/templates/messaging/compose_message.html
+++ b/messaging/templates/messaging/compose_message.html
@@ -4,7 +4,8 @@
 
 {% block body %}
 
-<form class="space-y-8 divide-y divide-gray-200 lg:w-1/2 mx-auto">
+<form class="space-y-8 divide-y divide-gray-200 lg:w-1/2 mx-auto" method="POST" action="{% url 'send_message' %}" id="compose-sms">
+  {% csrf_token %}
     <div class="space-y-8 divide-y divide-gray-200">
       <div>
         <div>
@@ -21,20 +22,20 @@
               Message Recipients
             </label>
             <div class="mt-1">
-              <select id="country" name="country" autocomplete="country-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-                <option>All Guests</option>
-                <option>Guest booked tomorrow</option>
-                <option>All guests with future bookings</option>
+              <select id="filter" name="filter"class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                <option value="All Guests">All Guests</option>
+                <option value="Guests Booked Tomorrow">Guest booked tomorrow</option>
+                <option value="All Guests with future bookings">All guests with future bookings</option>
               </select>
             </div>
           </div>
   
           <div class="mt-6 sm:col-span-6">
-            <label for="about" class="block text-sm font-medium text-gray-700">
+            <label for="message" class="block text-sm font-medium text-gray-700">
               Message
             </label>
             <div class="mt-1">
-              <textarea id="sms-content" name="sms-content" rows="5" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+              <textarea id="message" name="message" rows="5" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
             </div>
             <p class="mt-2 text-sm text-gray-500">The message is <span id="charUsed">0</span> / <span id="charTotal">160</span> characters and will send <span id="smsSend">1</span> sms to each recipient.</p>
 
@@ -62,7 +63,7 @@
     charUsed = document.getElementById('charUsed');
     charTotal = document.getElementById('charTotal');
     smsSend = document.getElementById('smsSend');
-    document.getElementById('sms-content').addEventListener('keyup', function (e) {
+    document.getElementById('message').addEventListener('keyup', function (e) {
       chars = this.value.length;
       charUsed.innerHTML = chars;
       document.getElementById('sms-warning').classList.add('hidden');
