--- a/bookings/templates/bookings/edit_booking.html
+++ b/bookings/templates/bookings/edit_booking.html
@@ -34,7 +34,7 @@
                 {% csrf_token %}
                 <div class="shadow overflow-hidden sm:rounded-md">
                     <div class="px-4 py-5 bg-white sm:p-6">
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid sm:grid-cols-2 gap-6">
                             {{ booking_form|crispy }}
                         </div>
                     </div>
