--- a/guests/templates/guests/add_guest.html
+++ b/guests/templates/guests/add_guest.html
@@ -22,7 +22,7 @@
                 {% csrf_token %}
                 <div class="shadow overflow-hidden sm:rounded-md">
                     <div class="px-4 py-5 bg-white sm:p-6">
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid sm:grid-cols-2 gap-6">
                             {{ personal_information_form|crispy }}
                         </div>
                     </div>
