--- a/theme/templates/bases/base-app.html
+++ b/theme/templates/bases/base-app.html
@@ -265,7 +265,7 @@
                 </div>
               </div>
             </div>
-            <div class="mt-6 flex space-x-3 md:mt-0 md:ml-4">
+            <div class="mt-6 flex flex-wrap space-x-3 md:mt-0 md:ml-4">
               {% block secondary-cta %}
               {% endblock %}
 
