FEAT: Added model filters to messaging and corrected variable in send message

--- a/messaging/templates/messaging/send_message.html
+++ b/messaging/templates/messaging/send_message.html
@@ -18,8 +18,7 @@
 
       <div class="mt-6 gap-y-6 gap-x-4 sm:grid-cols-6">
         <p class="mt-2 text-sm text-gray-500">
-          Your choosen filter of "<strong>{{ filter }}</strong>" will send a message to <strong>{{ receipients
-            }}</strong> guests.
+          Your choosen filter of "<strong>{{ filter }}</strong>" will send a message to <strong>{{ receipients }}</strong> guests.
         </p>
         <p class="mt-2 text-sm text-gray-500">
           Your message (as displayed below), contains <strong>{{ sms_length }}</strong> characters. This means
