--- a/theme/templates/bases/base-app.html
+++ b/theme/templates/bases/base-app.html
@@ -228,7 +228,7 @@
     <main class="flex-1 relative overflow-y-auto focus:outline-none">
       <!-- Page header -->
       <div class="bg-white shadow">
-        <div class="px-4 sm:px-6 lg:max-w-6xl lg:mx-auto lg:px-8">
+        <div class="px-4 sm:px-6 lg:max-w-7xl lg:mx-auto lg:px-8">
           <div class="py-6 md:flex md:items-center md:justify-between lg:border-t lg:border-gray-200">
             <div class="flex-1 min-w-0">
               <!-- Profile -->
@@ -248,7 +248,7 @@
                         <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
                           clip-rule="evenodd" />
                       </svg>
-                      Seán O'Sullivan
+                      {{ user.first_name }} {{ user.last_name }}
                     </dd>
                     <dt class="sr-only">Account status</dt>
                     <dd class="mt-3 flex items-center text-sm text-gray-500 font-medium sm:mr-6 sm:mt-0 capitalize">
