FIX: Removed irrelevant fields from signup form and corrected logout trans

--- a/theme/templates/allauth/account/logout.html
+++ b/theme/templates/allauth/account/logout.html
@@ -42,8 +42,7 @@
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
                 <button type="submit"
-                  class="lg:w-1/3 ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{%
-                  trans 'Sign Out' %}</button>
+                  class="lg:w-1/3 ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Sign Out</button>
               </div>
             </div>
           </div>
