FIX: Correct django template tag to show email correctly

--- a/theme/templates/allauth/account/email_confirm.html
+++ b/theme/templates/allauth/account/email_confirm.html
@@ -34,8 +34,7 @@
         {% user_display confirmation.email_address.user as user_display %}
         <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
             <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-                <p class="py-6 ml-3">Please confirm that <a href="mailto:{{ confirmation.email_address.email }}">{{
-                        confirmation.email_address.email }}</a> is an e-mail address for user {{ user_display }}.</p>
+                <p class="py-6 ml-3">Please confirm that <a href="mailto:{{ confirmation.email_address.email }}">{{ confirmation.email_address.email }}</a> is an e-mail address for user {{ user_display }}.</p>
 
                 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 
