STYLE: Updated styling on password_rest_from_key template

--- a/theme/templates/allauth/account/password_reset_from_key.html
+++ b/theme/templates/allauth/account/password_reset_from_key.html
@@ -17,8 +17,7 @@
             </div>
             <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
                 <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-                    <span class="block text-white">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change
-                        Password" %}{% endif %}</span>
+                    <span class="block text-white">Change Password</span>
                 </h1>
             </div>
         </div>
@@ -37,8 +36,8 @@
                 {% if form %}
                 <form method="POST" action="{{ action_url }}">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" name="action" value="{% trans 'change password' %}" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" />
+                    {{ form|crispy }}
+                    <input type="submit" name="action" value="{% trans 'Change Password' %}" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" />
                 </form>
                 {% else %}
                 <p>{% trans 'Your password is now changed.' %}</p>
