FEAT: Added function to send the sms

--- a/messaging/templates/messaging/send_message.html
+++ b/messaging/templates/messaging/send_message.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<form class="space-y-8 divide-y divide-gray-200 lg:w-1/2 mx-auto" method="POST" action="{% url 'message_sent' %}" id="sendMessage">
+<form class="space-y-8 divide-y divide-gray-200 lg:w-1/2 mx-auto" method="POST" action="{% url 'send_message' %}" id="sendMessage">
   <div class="space-y-8 divide-y divide-gray-200">
     <div>
       <div>
