STYLE: Updated help page

--- a/profiles/templates/profiles/help.html
+++ b/profiles/templates/profiles/help.html
@@ -39,57 +39,45 @@
           <span class="block text-base text-center text-indigo-600 font-semibold tracking-wide uppercase">Help</span>
           <span class="mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Your Guide to RestDos</span>
         </h1>
-        <p class="mt-8 text-xl text-gray-500 leading-8">Aliquet nec orci mattis amet quisque ullamcorper neque, nibh sem. At arcu, sit dui mi, nibh dui, diam eget aliquam. Quisque id at vitae feugiat egestas ac. Diam nulla orci at in viverra scelerisque eget. Eleifend egestas fringilla sapien.</p>
+        <p class="mt-8 text-xl text-gray-500 leading-8">A brief guide to all the functionality you have in your RestDos account.</p>
       </div>
       
       <div class="mt-6 prose prose-indigo prose-lg text-gray-500 mx-auto">
-        <figure>
-            <img class="w-full rounded-lg" src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&auto=format&fit=facearea&w=1310&h=873&q=80&facepad=3" alt="" width="1310" height="873">
-            <figcaption>Sagittis scelerisque nulla cursus in enim consectetur quam.</figcaption>
-          </figure>
         <p>If you prefer a written guide scroll on down or choose a section below to read the text version.</p>
         <ul role="list">
-          <li>Dashboard.</li>
-          <li>Guests.</li>
-          <li>Bookings.</li>
-          <li>Messaging.</li>
-          <li>Account.</li>
+          <li><a href="#dashboard">Dashboard</a></li>
+          <li><a href="#guests">Guests</a></li>
+          <li><a href="#bookings">Bookings</a></li>
+          <li><a href="#messaging">Messaging</a></li>
         </ul>
 
-        <h2>Dashboard</h2>
-        <p>Purus morbi dignissim senectus mattis <a href="#">adipiscing</a>. Amet, massa quam varius orci dapibus volutpat cras. In amet eu ridiculus leo sodales cursus tristique. Tincidunt sed tempus ut viverra ridiculus non molestie. Gravida quis fringilla amet eget dui tempor dignissim. Facilisis auctor venenatis varius nunc, congue erat ac. Cras fermentum convallis quam.</p>
-        <blockquote>
-          <p>Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi.</p>
-        </blockquote>
-        <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+        <h2 id="dashboard">Dashboard</h2>
+        <p>Your bookings dashbaord is where you can see some key statistics about your restaurants bookings with RestDos.</p>
+        <ul>
+          <li>Total Guests</li>
+          <li>Total Bookings</li>
+          <li>Total Sales</li>
+          <li>% No-Shows</li>
+          <li>% Completed Bookings</li>
+          <li>Average Booking Value</li>
+        </ul>
 
-        <h2>Guests</h2>
-        <p>Purus morbi dignissim senectus mattis <a href="#">adipiscing</a>. Amet, massa quam varius orci dapibus volutpat cras. In amet eu ridiculus leo sodales cursus tristique. Tincidunt sed tempus ut viverra ridiculus non molestie. Gravida quis fringilla amet eget dui tempor dignissim. Facilisis auctor venenatis varius nunc, congue erat ac. Cras fermentum convallis quam.</p>
-        <blockquote>
-          <p>Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi.</p>
-        </blockquote>
-        <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+        <p>You will see these stats update as you start entering your guests and their bookings.</p>
 
-        <h2>Bookings</h2>
-        <p>Purus morbi dignissim senectus mattis <a href="#">adipiscing</a>. Amet, massa quam varius orci dapibus volutpat cras. In amet eu ridiculus leo sodales cursus tristique. Tincidunt sed tempus ut viverra ridiculus non molestie. Gravida quis fringilla amet eget dui tempor dignissim. Facilisis auctor venenatis varius nunc, congue erat ac. Cras fermentum convallis quam.</p>
-        <blockquote>
-          <p>Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi.</p>
-        </blockquote>
-        <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+        <h2 id="guests">Guests</h2>
+        <p>This is where you can see all the guests you have in your system. From this page you can add new guests and edit guest details. The rating that you see here is for you to rate the guest. This is very useful to help identify your VIP guests so you know which tables to allocate to which booking. You add bookings in the software in the guest profile.</p>
 
-        <h2>Messaging</h2>
-        <p>Purus morbi dignissim senectus mattis <a href="#">adipiscing</a>. Amet, massa quam varius orci dapibus volutpat cras. In amet eu ridiculus leo sodales cursus tristique. Tincidunt sed tempus ut viverra ridiculus non molestie. Gravida quis fringilla amet eget dui tempor dignissim. Facilisis auctor venenatis varius nunc, congue erat ac. Cras fermentum convallis quam.</p>
-        <blockquote>
-          <p>Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi.</p>
-        </blockquote>
-        <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+        <p>You can search for your guests on any page of the application using the search bar at the top of the website. So when you want to add a booking for an existing guest search for them here by name, mobile or email and you can add a booking straight to their profile.</p> 
 
-        <h2>Account</h2>
-        <p>Purus morbi dignissim senectus mattis <a href="#">adipiscing</a>. Amet, massa quam varius orci dapibus volutpat cras. In amet eu ridiculus leo sodales cursus tristique. Tincidunt sed tempus ut viverra ridiculus non molestie. Gravida quis fringilla amet eget dui tempor dignissim. Facilisis auctor venenatis varius nunc, congue erat ac. Cras fermentum convallis quam.</p>
-        <blockquote>
-          <p>Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi.</p>
-        </blockquote>
-        <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+        <h2  id="bookings">Bookings</h2>
+        <p>This is the page where you manage all your bookings. You can filter by booking status and date. The page will always default to all bookings on the current day to help save you time in managing your bookings. You can add and edit bookings from this screen as well as delete an existing booking by editing it.</p>
+
+        <p>Don't forget that to add a booking you go to the guest profile and then click add booking</p> 
+
+        <h2 id="messaging">Messaging</h2>
+        <p>Here you can craft sms campaigns to send to all your guests. In the first section you compose your message and we will let you know how many sms you will be sending per guest. In the preview & send screen then we will confirm the details of the campaign, including the number of receipeients and the cost of sending it so you can make an informed decision before sending.</p>
+
+        <p>Please note that only guests who have sms marketing consent active on their profile will appear here for marketing campaigns.</p>
 
       </div>
     </div>
