--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -4,25 +4,7 @@
 
 {% block body %}
 <!-- Hero section -->
-<div class="relative">
-  <div class="absolute inset-x-0 bottom-0 h-1/2 bg-gray-100"></div>
-  <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
-    <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
-      <div class="absolute inset-0">
-        <img class="h-full w-full object-cover" src="https://images.unsplash.com/photo-1546195643-70f48f9c5b87?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="People working on laptops">
-        <div class="absolute inset-0 bg-gradient-to-r from-purple-800 to-indigo-700 mix-blend-multiply"></div>
-      </div>
-      <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
-        <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-          <span class="block text-white">Contact Us</span>
-        </h1>
-        <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
-          Take control of your guest database to grow your restaurant. Powerful marketing, complete guest management and effective automated messaging that works for you.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
+{% include 'includes/components/website_hero.html' %}
 
 <div class="bg-gray-100 py-2 px-4 overflow-hidden sm:px-6 lg:px-8 lg:py-8">
   <div class="relative max-w-xl mx-auto">
