--- a/website/templates/website/pricing.html
+++ b/website/templates/website/pricing.html
@@ -4,28 +4,7 @@
 
 {% block body %}
 <!-- Hero section -->
-<div class="relative">
-  <div class="absolute inset-x-0 bottom-0 h-1/2 bg-gray-100"></div>
-  <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
-    <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
-      <div class="absolute inset-0">
-        <img class="h-full w-full object-cover"
-          src="https://th.bing.com/th/id/R.00c5a689df7665ce66043a96a830dbcd?rik=bK47uc03GDr4Gw&riu=http%3a%2f%2fwww.buro247.me%2fimages%2fCA1-BK_Dining13.gif&ehk=JD6Pt2aBzXPkCFDny31UpN7IOMdioZ2xlb5vNDz1rfU%3d&risl=&pid=ImgRaw&r=0"
-          alt="People working on laptops">
-        <div class="absolute inset-0 bg-gradient-to-r from-blue-500 to-indigo-600 mix-blend-multiply"></div>
-      </div>
-      <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
-        <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-          <span class="block text-white">Let's Grow Your</span>
-          <span class="block text-indigo-200">restaurant revenue</span>
-        </h1>
-        <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
-          Simple plans, great pricing and a 30 day no questions money back guarantee.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
+{% include 'includes/components/website_hero.html' %}
 
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="bg-gray-100">
