FEAT: Converted table empty states to template components

--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -58,7 +58,7 @@
 {% endblock %}
 
 {% block body %}
-<!-- This example requires Tailwind CSS v2.0+ -->
+{% if bookings %}
 <div class="flex flex-col lg:block">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
@@ -94,7 +94,6 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% if bookings %}
                         {% for booking in bookings %}
                         <tr class="bg-white">
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
@@ -135,19 +134,20 @@
                             </td>
                         </tr>
                         {% endfor %}
-                        {% else %}
-                        <tr>
-                            <td colspan="7" class="text-center text-blue-400 h-48 font-bold">
-                                No Bookings Yet
-                            </td>
-                        </tr>
-                        {% endif %}
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
+{% else %}
+
+<!-- Empty State -->
+{% url 'guests' as url %}
+{% include 'includes/components/empty_state.html' with url=url %}
+
+{% endif %}
+
 {% endblock %}
 
 {% block postloadjs %}
