STYLE: Removed mb from reports/bookings ctas

--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -3,7 +3,7 @@
 {% block extra_title %}Bookings{% endblock %}
 
 {% block primary-cta %}
-<div class="mb-5 mx-4 flex-1">
+<div class="mx-4 flex-1">
     <label for="filterDate" class="block text-sm font-medium text-gray-700">
         Date
     </label>
@@ -15,7 +15,7 @@
 </div>
 {% endblock%}
 {% block secondary-cta %}
-<div class="mb-5 mx-4 flex-1">
+<div class="mx-4 flex-1">
     <label for="filterStatus" class="block text-sm font-medium text-gray-700">
         Status
     </label>
