FEAT: Overhauled app messaging

--- a/guests/templates/guests/guest_detail.html
+++ b/guests/templates/guests/guest_detail.html
@@ -118,7 +118,7 @@
                         Stats
                     </h3>
                     <p class="mt-1 text-sm text-gray-600">
-                        Key statistics on your guest and all of their bookings.
+                        Key statistics on your guest and all of their bookingssave.
                     </p>
                 </div>
             </div>
